Made changes to _portfolio.scss Fixed an issue that was causing the images to stretch instead of the desired zoom-in effect.

--- a/scss/sections/_portfolio.scss
+++ b/scss/sections/_portfolio.scss
@@ -3,9 +3,7 @@
 
 .portfolio {
     @include gradient;
-
     position: relative;
-    padding: 4rem 0;
 }
 
 .portfolio-box {
@@ -14,11 +12,13 @@
     height: 18.5rem;
     overflow: hidden;
     margin-bottom: 1.5rem;
+    border-bottom: 0.5rem solid $orange;
 
     img {
         padding: 0;
         width: 100%;
         height: 100%;
+        object-fit: cover;
     }
 
     .portfolio-info {
